fix parser to handle leading whitespace; adjust styles

--- a/app/static/css/_layout.styl
+++ b/app/static/css/_layout.styl
@@ -2,4 +2,7 @@ body
   padding: ($base-line-height * 3) $col-edge-padding
   text-align: center
   font-family: $sans-font-family
-  font-size: $base-font-size * 3
+
+h1
+  font-size: $base-font-size * 4
+  margin-bottom: $base-line-height
